--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
         #results {
             margin-top: 20px;
         }
+        .result {
+            margin-bottom: 10px;
+            padding: 10px;
+            border: 1px solid #ddd;
+        }
+        .result h3 {
+            margin-top: 0;
+        }
+        .result p {
+            margin-bottom: 0;
+        }
     </style>
 </head>
 <body>
