--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container">
         <h1>Kelime Arama</h1>
         <input type="text" id="wordInput" placeholder="Kelimeyi buraya girin">
-        <button id="searchButton">Ara</button>
+        <button id="searchButton">Arax</button>
         <div id="results"></div>
     </div>
 
