--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     <div class="container">
         <h1>Kelime Arama</h1>
         <input type="text" id="wordInput" placeholder="Kelimeyi buraya girin">
-        <button id="searchButton">Arax</button>
+        <button id="searchButton">Araz</button>
         <div id="results"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="LangLab2/script.js"></script>
 </body>
 </html>
